[package]
name = "nt_native"
version = "0.1.1"
authors = ["vsrs <vit@conrlab.com>"]
edition = "2018"
readme = "README.md"
keywords = ["windows", "NT", "native"]
categories = ["no-std", "os::windows-apis"]
license = "MIT/Apache-2.0"
repository = "https://github.com/vsrs/nt_native.git"
description = "Windows Native subsystem bindings for the Rust programming language."

[dependencies]
cfg-if = "0.1.10"
winapi = { version = "0.3" }
ntapi = { version = "0.3.3" }
bitflags = "1.0"
wstr = "0.2"

[features]
default = ["std"]
kernel = ["ntapi/kernel"]
user = ["ntapi/user", "winapi/libloaderapi", "winapi/winbase"]
std = ["user"]
