[package]
name = "nt_native"
version = "0.1.3"
authors = ["vsrs <vit@conrlab.com>"]
edition = "2018"
readme = "README.md"
keywords = ["windows", "NT", "native"]
categories = ["no-std", "os::windows-apis"]
license = "MIT/Apache-2.0"
repository = "https://github.com/vsrs/nt_native.git"
description = "Windows Native subsystem bindings for the Rust programming language."

[dependencies]
cfg-if = "~1.0"
winapi = { version = "~0.3" }
ntapi = { version = "~0.3" }
bitflags = "~1.3"
rdisk_shared = { version = "^0.1", default-features = false }
windy = "~0.2"
windy-macros = "~0.1"

[features]
default = ["std"]
kernel = ["ntapi/kernel"]
user = ["ntapi/user", "winapi/libloaderapi", "winapi/winbase"]
std = ["user", "rdisk_shared/std"]
